fix spacing in our lessons

--- a/src/css/our-lessons.css
+++ b/src/css/our-lessons.css
@@ -2,7 +2,14 @@
   text-align: center;
   margin: 80px 20px;
 }
-
+.container--our-lessons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+}
 @media screen and (min-width: 768px) {
   .our-lessons {
   margin: 100px 32px;
@@ -46,7 +53,7 @@
 .our-lessons .underline::after {
   content: '';
   position: absolute;
-  left: -6;
+  left: -6px;
   right: -6px;
   left: -6px;
   bottom: 4px;
@@ -69,6 +76,7 @@
 }
 
 .our-lessons_description {
+  width: 100%;
   max-width: 335px;
   margin: 0 auto 40px;
   font-weight: 400;
@@ -89,6 +97,7 @@
 }
 
 .lessons-cards {
+  width: 100%;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -101,6 +110,7 @@
 
 @media screen and (min-width: 768px) {
   .lessons-cards {
+    max-width: 704px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -110,6 +120,7 @@
 
 @media screen and (min-width: 1280px) {
   .lessons-cards {
+    max-width: 1024px;
     flex-wrap: nowrap;
     justify-content: center;
     gap: 32px;
@@ -117,7 +128,7 @@
 }
 
 .lesson-card {
-  width: 335px;
+  width: 100%;
   min-height: 400px;
   height: auto;
   padding: 20px 20px 40px;
@@ -142,7 +153,7 @@
 
 @media screen and (min-width: 1280px) {
   .lesson-card {
-    width: 320px;
+     width: calc((100% - 2*32px) / 3);
     min-height: 404px;
   }
 }
@@ -223,7 +234,6 @@
   background-color: var(--green);
   color: var(--white);
 }
-
 .our-lessons .lessons-cards .lesson-card:nth-child(2) .lesson-card_title,
 .our-lessons .lessons-cards .lesson-card:nth-child(2) .lesson-card_text,
 .our-lessons .lessons-cards .lesson-card:nth-child(2) .lesson-card_amount,
